# guiControl

./: README.md  RemoteControl.cabal  guiControl.cabal  remoteControl.cabal  stack.yaml
src/: Core.hs  DefaultConfig.hs  Main.hs  UI.hs  XDoToolWrapper.hs
