name:                guiControl
version:             0.1.0.0
homepage:            https://github.com/hallasurvivor/guiControl#readme
license:             BSD3
author:              Chris Grossack
maintainer:          hallasurvivor@gmail.com
copyright:           2018 Chris Grossack
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable remoteControl
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Core
                      ,DefaultConfig
                      ,XDoToolWrapper
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,process
                      ,mtl
                      ,containers
                      ,ansi-terminal
