name:                remoteControl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hallasurvivor/remoteControl#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Grossack
maintainer:          hallasurvivor@gmail.com
copyright:           2018 Chris Grossack
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable remoteControl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,ansi-terminal
                      ,process
                      ,mtl
                      ,containers
                        
